# miscellaneous_dirichlet

./: README.md
.github/workflows/: docker-image-01.yml  docker-image-02.yml  docker-image-03.yml  docker-image-04.yml  docker-image.yml
dirichlet_dash_app01/: Dockerfile  dirichlet_alpha_parameters.csv  dirichlet_multinomial.py
dirichlet_dash_app01/src/: dirichlet_multinomial.py  pyproject.toml
dirichlet_dash_app02/: dirichlet_multinomial.py
dirichlet_dash_app02/parameters/: dirichlet_alpha_parameters.csv
dirichlet_dash_app02/src/: dirichlet_multinomial.py  pyproject.toml
dirichlet_dash_app03/: dirichlet_multinomial.py
dirichlet_dash_app03/src/: dirichlet_multinomial.py  pyproject.toml
dirichlet_dash_app04/: dirichlet_multinomial.py
dirichlet_dash_app04/src/: anaconda_env_create.sh  dirichlet_multinomial.py  pyproject.toml  requirements.txt
grid/: environment.yml  grid.py
