[tool.poetry]
name = "dirichlet-dash-app02"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "dirichlet_dash_app02"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.0.3"
scipy = "^1.11.2"
dash = "^2.12.1"
dash-daq = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
